Remove duplicate stylesheet link and fix casing
Fixed duplicate stylesheet link and corrected casing.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- ^ >>========> Bootstrap -->
     <link rel="stylesheet" href="./assets/CSS/bootstrap.min.css" />
+     <!-- ^ >>========>  All Main Stylesheet -->
+     <link rel="stylesheet" href="./assets/css/all.min.css">
     <!-- ^ >>========> Main Stylesheet -->
     <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
@@ -36,3 +38,4 @@
     <script src="./assets/js/quote.js"></script>
   </body>
 </html>
+
